greedy problem modified